Fix gray to have enough contrast ratio on white

--- a/app/styles/application.css
+++ b/app/styles/application.css
@@ -114,7 +114,7 @@ h1, p {
 
 .stats__text {
     font-size: 14px;
-    color: gray;
+    color: #757575;
     padding: 10px 10px 5px 10px;
 }
 
